--- a/t.html
+++ b/t.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Timely - Schedule Smarter, Not Harder</title>
-    <link rel="stylesheet" href="t.css"></style>
+    <link rel="stylesheet" href="t.css">
 </head>
 <body>
     <button onclick="start()">Click to Start Timely</button>
