--- a/t.html
+++ b/t.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="t.css">
 </head>
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <button onclick="start()">Click to Start Timely</button>
     <script src="t.js"></script>
 </body>
