--- a/t.html
+++ b/t.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <button onclick="start()">Click to Start Timely</button>
+    <button onclick="alert('Press OK. If that does not work, try contacting us about the error at ayaan.khalique3@gmail.com'); start();">There seems to have been an error!</button>
+    <p>You can click the button above to try starting Timely, however it may not work</p>
     <script src="t.js"></script>
 </body>
 </html>
