--- a/tf.html
+++ b/tf.html
@@ -11,11 +11,13 @@
     </style>
 </head>
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <h1>Timely Free</h1>
     <input type="text" id="itemInput" placeholder="Enter item">
     <button onclick="addItem()">Add Item</button>
     <ul id="itemList"></ul>
 
+    <button id="smart">Smart Suggestion Free Sample</button>
     <script src="tf.js"></script>
 </body>
 </html>
