--- a/tim.html
+++ b/tim.html
@@ -1,12 +1,12 @@
-<!----><!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8" />
     <title>title</title>
     <style>
-    *   {
-        box-sizing: border-box;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        * {
+            box-sizing: border-box;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
         body {
@@ -55,14 +55,17 @@
     </style>
 </head>
 <body>
-    <input id="ask" onkeydown="
-            if (event.key === 'Enter') askOpenAI(this.value)
-        ">
+    <input id="ask" onkeydown="if (event.key === 'Enter') askOpenAI(this.value)">
     <p id="response"></p>
     <script>
         async function askOpenAI(prompt) {
-            const OPENAI_API_KEY = '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';
-            const stak = `
+            const user = JSON.parse(localStorage.getItem('savedUser'));
+            if (!user) {
+                alert('User not logged in');
+                return;
+            }
+
+            const systemPrompt = `
                 Your are T.I.M -> Timely Intelligence Mechanism
                 Your job is to transform what someone says into integratable schedules
                 NEVER reply with words unless there is not enough information, instead, SIMPLYreply with ONLY a JSON object with the properties needed
@@ -75,39 +78,40 @@
                 The only categories are work, personal, shopping, to-do and other
                 NEVER GUESS THE PASSWORD USERNAME OR EMAIL
             `;
-            const user = JSON.parse(localStorage.getItem('savedUser'));
-            if (!user) {
-                alert('User not logged in')
-                return;
-            }
+
             document.getElementById('response').innerText = 'Thinking...';
-            const response = await fetch("https://api.openai.com/v1/chat/completions", {
-                method: "POST",
-                headers: {
-                    "Authorization": "Bearer " + OPENAI_API_KEY,
-                    "Content-Type": "application/json"
-                },
-                body: JSON.stringify({
-                    model: "gpt-3.5-turbo",
-                    messages: [
-                        { role: "system", content: stak },
-                        { role: "user", content: prompt }
-                    ]
-                })
-            });
 
-            const data = await response.json();
-            console.log("Raw response:", data);
+            try {
+                const response = await fetch('https://your-backend-url.com/ask', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({
+                        prompt: prompt,
+                        system: systemPrompt
+                    })
+                });
 
-            let reply = data.choices?.[0]?.message?.content;
-            reply = reply.replace('user.username', user.username);
-            reply = reply.replace('user.email', user.email);
-            reply = reply.replace('user.password', user.password);
+                const data = await response.json();
+                let reply = data.choices?.[0]?.message?.content;
 
-            console.log("OpenAI says:", reply);
-            document.getElementById('response').innerText = 'Processing Information...';
-            addScheduleToBackend(JSON.parse(reply));
+                if (!reply) {
+                    document.getElementById('response').innerText = 'No response from AI 🤖';
+                    return;
+                }
+
+                reply = reply.replace('user.username', user.username);
+                reply = reply.replace('user.email', user.email);
+                reply = reply.replace('user.password', user.password);
+
+                document.getElementById('response').innerText = 'Processing Information...';
+                addScheduleToBackend(JSON.parse(reply));
+
+            } catch (error) {
+                console.error('Request failed:', error);
+                document.getElementById('response').innerText = 'Error contacting backend 🥲';
+            }
         }
+
         async function addScheduleToBackend(schedule) {
             try {
                 const response = await fetch('https://timely-zc0n.onrender.com/items/', {
@@ -117,15 +121,19 @@
                     },
                     body: JSON.stringify(schedule)
                 });
+
                 if (!response.ok) {
                     const errorText = await response.text();
                     console.error(`Failed to add schedule: ${response.status} - ${errorText}`);
                     throw new Error('Failed to add schedule');
                 }
-                document.getElementById('response').innerText = 'Item added sucessfully!';
+
+                document.getElementById('response').innerText = 'Item added successfully!';
                 return await response.json();
+
             } catch (error) {
                 console.error('Error in addScheduleToBackend:', error);
+                document.getElementById('response').innerText = 'Backend error. Try again?';
                 return null;
             }
         }
