--- a/tim.html
+++ b/tim.html
@@ -82,7 +82,7 @@
             document.getElementById('response').innerText = 'Thinking...';
 
             try {
-                const response = await fetch('https://your-backend-url.com/ask', {
+                const response = await fetch('https://https://timely-2.onrender.com/ask', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
