--- a/tim.html
+++ b/tim.html
@@ -90,7 +90,7 @@
                 alert('User not logged in');
                 return;
             }
-            const schedules = getSchedulesByEmail(user.email);
+            const schedules = await getSchedulesByEmail(user.email);
             const todaysDate = new Date().toLocaleDateString();
 
             const systemPrompt = `
