--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <title>Timely - Schedule Smarter, Not Harder</title>
+    <link rel="icon" type="image/x-icon" href="../images/favicon.png">
     <link rel="stylesheet" href="t.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3927114728284023"
+     crossorigin="anonymous"></script>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <button onclick="alert('Press OK. If that does not work, try contacting us about the error at ayaan.khalique3@gmail.com'); start();">There seems to have been an error!</button>
-    <p>You can click the button above to try starting Timely, however it may not work</p>
     <script src="t.js"></script>
 </body>
 </html>
