--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3927114728284023"
      crossorigin="anonymous"></script>
+    <meta name="google-adsense-account" content="ca-pub-3927114728284023">
 </head>
 <body>
     <script src="t.js"></script>
